# usb-keyboard

./: .clangd  CMakeLists.txt  hutrr84_lighting_illumination.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  开发指南.md  项目文档.md
hid_device/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
main/: CMakeLists.txt  idf_component.yml  init_app.c  main.c
main/audio_player/: board.c  board.h  board_def.h  board_pins_config.c  mp3_player.c  mp3_player.h
main/init_manager/: init_app.c  init_app.h  init_manager.c  init_manager.h
main/joystick/: joystick.c  joystick.h
main/keyboard_led/: README.md  keyboard_led.c  keyboard_led.h  说明.md
main/nvs_manager/: CMakeLists.txt  C_INTEGRATION.md  README.md  c_example_usage.c  c_wrapper.cpp  c_wrapper.h  example_usage.cpp  keymap_nvs_manager.c  keymap_nvs_manager.cpp  keymap_nvs_manager.h  menu_nvs_manager.c  menu_nvs_manager.h  nvs_manager.c  nvs_manager.h  nvs_manager_base.cpp  nvs_manager_base.h  unified_nvs_manager.c  unified_nvs_manager.h  wifi_nvs_manager.c  wifi_nvs_manager.h
main/spi_scanner/: NVS_INTEGRATION.md  integration_test.c  keycodes.h  keymap_manager.c  keymap_manager.h  keymap_test.c  keymap_test.h  nvs_keymap.c  nvs_keymap.h  spi_config.h  spi_keyboard_config.h  spi_scanner.c  spi_scanner.h
main/ssd1306/oled_action/: oled_menu_calculator.c  oled_menu_combined.h  oled_menu_keyboard.c  oled_menu_wifi.c
main/ssd1306/oled_driver/: OLED_driver.c  OLED_driver.h
main/ssd1306/oled_fonts/: OLED.c  OLED.h  OLED_Fonts.c  OLED_Fonts.h
main/ssd1306/oled_menu/: oled_menu.c  oled_menu.h  oled_menu_display.c  oled_menu_display.h  oled_menu_wifi.c  oled_menu_wifi.h  oled_usage_guide.md
main/tinyusb_hid/: tinyusb_hid.c  tinyusb_hid.h
main/wifi_app/: README.md  backend_apis.md  index.html  wifi_app.c  wifi_app.h
